# pdm-repro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-slim.yml
src/pdm_slim_repro/: __init__.py  main.py
