[project]
name = "pdm-slim-repro"
version = "0.1.0"
description = "Reproduces PDM crash with python:3.10-slim-bookworm"
authors = [
    {name = "Test User", email = "test@example.com"},
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0.0",
]